--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,16 @@
 {
   "autoload": {
-    "psr-4": {
-      "App\\": "app/"
-    }
-  }
+      "psr-4": {
+          "App\\": "app/",
+          "App\\Core\\": "app/core/",
+          "App\\Contracts\\": "app/contracts/"
+      }
+  },
+  "config": {
+      "optimize-autoloader": true,
+      "preferred-install": "dist",
+      "sort-packages": true
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
